@@ -18,80 +18,52 @@ public class OrderUtil {
     // retrieve orders from csv lines
     public static List<Order> parseCsvLines(final List<String> lines) {
 
-        List<Order> result = new ArrayList<>();
-
         if (lines == null || lines.isEmpty()) {
-            return result;
+            return Collections.emptyList();
         }
 
-        for (String row :
-                lines) {
-            if (row == null || row.isBlank()) {
-                continue;  // daca e gol skip la next , check better if the line is malformed
-            }
-            if (!(row.startsWith("O-"))) {
-                continue;
-            }
-
-            String[] splitRow = row.split(",");
-
-            if (splitRow.length != 7) {    // daca are sub sau peste 7 coloane --> malformed
-                continue;
-            }
-
-            if(!(splitRow[0].matches("^O-\\d+$")) ||              // check for orderId to be O-1001 , O-1002
-                    !(splitRow[1].matches("^C-\\d{3}$"))){        // check for customerId to be C-001 , C-002
-                continue;
-            }
-
-
-            Order order = new Order(
-                    splitRow[0].trim(),
-                    splitRow[1].trim(),
-                    LocalDate.parse(splitRow[2].trim()),
-                    splitRow[3].trim(),
-                    splitRow[4].trim(),
-                    new BigDecimal(splitRow[5].trim()),
-                    Integer.parseInt(splitRow[6].trim())
-            );
-
-            result.add(order);
-        }
-
-        return result;
+        return lines.stream()
+                .map(line -> {
+                    try {
+                        String[] parts = line.split(",");
+                        String orderId = parts[0].trim();
+                        String customerId = parts[1].trim();
+                        LocalDate orderDate = LocalDate.parse(parts[2].trim());
+                        String productName = parts[3].trim();
+                        String category = parts[4].trim();
+                        BigDecimal unitPrice = new BigDecimal(parts[5].trim());
+                        int quantity = Integer.parseInt(parts[6].trim());
+                        return new Order(orderId, customerId, orderDate, productName, category, unitPrice, quantity);
+                    } catch (Exception e) {
+                        return null; // skip malformed lines
+                    }
+                })
+                .filter(Objects::nonNull)
+                .toList();
     }
 
     // calculate revenue by day
     // revenue = unitPrice * quantity
     public static Map<LocalDate, BigDecimal> revenueByDay(final List<Order> orders) {
 
-        Map<LocalDate, BigDecimal> result = new HashMap<>();
-
-        if (orders == null || orders.isEmpty()) {
-            return result;
-        }
-
-        result = orders.stream()
-                .collect(Collectors.groupingBy(
-                        Order::getOrderDate,
-                        Collectors.reducing(
-                                BigDecimal.ZERO,
-                                order -> order.getUnitPrice()
-                                        .multiply(BigDecimal.valueOf(order.getQuantity())),
-                                BigDecimal::add
+        return orders.stream()
+                .collect(
+                        Collectors.groupingBy(
+                                Order::getOrderDate,
+                                Collectors.mapping(
+                                        order -> order.getUnitPrice().multiply(BigDecimal.valueOf(order.getQuantity())),
+                                        Collectors.reducing(BigDecimal.ZERO, BigDecimal::add)
+                                )
                         )
-                ));
+                );
 
-        return result;
     }
 
     // get top "n" products by revenue
     public static List<Map.Entry<String, BigDecimal>> topProductsByRevenue(final List<Order> orders, final int n) {
 
-        List<Map.Entry<String, BigDecimal>> result = new ArrayList<>();
-
         if (orders == null || orders.isEmpty() || n < 1) {
-            return result;
+            return Collections.emptyList();
         }
 
         Map<String, BigDecimal> revenuePerProd = orders.stream()
@@ -105,37 +77,29 @@ public class OrderUtil {
                         )
                 ));
 
-        result = revenuePerProd.entrySet().stream()
+        return revenuePerProd.entrySet().stream()
                 .sorted(Map.Entry.<String, BigDecimal>comparingByValue().reversed())
                 .limit(n)
-                .collect(Collectors.toList());
-
-        return result;
+                .toList();
     }
 
     // get customers who ordered products from at least "minCategories" different categories
     public static List<String> customersWithCategoryDiversity(final List<Order> orders, final int minCategories) {
 
-        List<String> result = new ArrayList<>();
-
-        if (orders == null || orders.isEmpty() || minCategories < 1) {
-            return result;
-        }
-
-        Map<String, Set<String>> intermediateMap = orders.stream()
-                .collect(Collectors.groupingBy(
+        final var categoriesByCustomer = orders.stream()
+                .collect(
+                        Collectors.groupingBy(
                                 Order::getCustomerId,
-                                Collectors.mapping(Order::getCategory, Collectors.toSet())
+                                Collectors.mapping(
+                                        Order::getCategory,
+                                        Collectors.toSet()
+                                )
                         )
                 );
-
-        result = intermediateMap.entrySet().stream()
-                .filter(x -> x.getValue().size() >= minCategories)
+        return categoriesByCustomer.entrySet().stream()
+                .filter(entry -> entry.getValue().size() >= minCategories)
                 .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
-
-
-        return result;
+                .toList();
     }
 
     // find the first product containing a given substring (case-insensitive)
